--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="/home/edvinas/repos/odin-recipes/recipes/lasagna.html">Lasagna</a>
+    <a href="/home/edvinas/repos/odin-recipes/recipes/spaghetti.html">Spaghetti</a>
 </body>
 </html>
