--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/home/edvinas/repos/odin-recipes/recipes/lasagna.html">Lasagna</a>
-    <a href="/home/edvinas/repos/odin-recipes/recipes/spaghetti.html">Spaghetti</a>
-</body>
+    <ul>
+    <li><a href="/home/edvinas/repos/odin-recipes/recipes/lasagna.html">Lasagna</a>
+    </li>
+    <li><a href="/home/edvinas/repos/odin-recipes/recipes/spaghetti.html">Spaghetti</a>
+    </li>
+    </body>
 </html>
